--- a/config.json
+++ b/config.json
@@ -1,29 +1,29 @@
 {
     "training": {
         "agent": {
-            "strategy": "dueling-ddqn",
-            "load_": "models/showdown/dueling/v5_1.h5",
+            "strategy": "dueling",
+            "load_": "models/test/dueling/v5_1.h5",
             "load": "",
-            "save": "models/showdown/dueling/v6.h5"
+            "save": "models/test/dueling/v6.h5"
         },
         "opponent": {
-            "strategy": "dqn",
+            "strategy": "c51",
             "load_": "models/showdown/c51/v1_2_8.h5",
             "load": "",
-            "save": "models/showdown/dqn/v3.h5"
+            "save": "models/test/dqn/v3.h5"
         },
         "results": "results/showdown_c51_dueling_v1.csv"
     },
     "live": {
         "agent": {
-            "strategy": "dueling-ddqn",
-            "load_": "models/showdown/dueling/v5_1.h5",
-            "load": ""
+            "strategy": "c51",
+            "load": "models/c51/v1_3.h5",
+            "load_": ""
         },
         "opponent": {
-            "strategy": "dueling-ddqn",
-            "load_": "models/showdown/dueling/v5_1.h5",
-            "load": ""
+            "strategy": "c51",
+            "load": "models/c51/v1_3.h5",
+            "load_": ""
         }
     },
     "rewards": {
@@ -32,5 +32,7 @@
         "hit": 0,
         "miss": 0
     },
-    "observe": true
+    "observe": false,
+    "fps": -1,
+    "robot": true
 }
