--- a/config.json
+++ b/config.json
@@ -1,18 +1,16 @@
 {
     "training": {
         "agent": {
-            "strategy": "c51",
-            "load_": "models/test/dueling/v5_1.h5",
+            "strategy": "dueling",
             "load": "",
-            "save": "models/test/dueling/v6.h5"
+            "save": "models/dueling/v1.h5"
         },
         "opponent": {
             "strategy": "c51",
-            "load_": "models/showdown/c51/v1_2_8.h5",
             "load": "",
-            "save": "models/test/dqn/v3.h5"
+            "save": "models/c51/v1.h5"
         },
-        "results": ""
+        "results": "results/showdown/c51-dueling_v1.csv"
     },
     "live": {
         "agent": {
@@ -35,5 +33,6 @@
     "observe": true,
     "fps": -1,
     "robot": true,
-    "capacity": 4
+    "capacity": 4,
+    "tensorboard": "logs/showdown_v1"
 }
