--- a/config.json
+++ b/config.json
@@ -2,16 +2,16 @@
     "training": {
         "agent": {
             "strategy": "c51",
-            "load_": "",
-            "load": "models/robot/c51/v3.h5",
-            "save": "models/robot/c51/v4.h5"
+            "load": "",
+            "load_": "models/robot/c51/v.h5",
+            "save": "models/robot/c51/v5.h5"
         },
         "opponent": {
             "strategy": "dueling",
             "load": "",
-            "save": "models/opponent/dueling/v1_1.h5"
+            "save": "models/opponent/dueling/v2.h5"
         },
-        "results": "results/c51_4_dueling_1.csv"
+        "results": "results/c51_5_dueling_2.csv"
     },
     "live": {
         "agent": {
@@ -34,6 +34,6 @@
     "train": true,
     "fps": 60,
     "robot": true,
-    "capacity": 4,
+    "capacity": 5,
     "tensorboard": "logs/showdown_v2"
 }
