--- a/Pipfile
+++ b/Pipfile
@@ -5,11 +5,10 @@ verify_ssl = true
 
 [dev-packages]
 sentry-sdk = "*"
+black = "*"
 flake8 = "*"
-v = {editable = true,version = "*"}
 
 [packages]
-pygame = "*"
 mypy = "*"
 jupyterlab = "*"
 numpy = "*"
@@ -25,6 +24,11 @@ tensorflow-gpu = "==1.12.0"
 requests = "*"
 pytest = "*"
 pymongo = "*"
+black = "*"
+pygame = "==1.9.6"
 
 [requires]
 python_version = "3.6"
+
+[pipenv]
+allow_prereleases = true
