--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,6 @@ black = "*"
 [packages]
 jupyterlab = "*"
 numpy = "*"
-keras = "*"
 matplotlib = "*"
 pillow = "*"
 seaborn = "*"
@@ -25,6 +24,8 @@ requests = "*"
 pymongo = "*"
 pygame = "==1.9.6"
 grpcio = "==1.20.1"
+keras = "*"
+tensorflow = "==1.12.0"
 
 [requires]
 python_version = "3.6"
