--- a/Pipfile
+++ b/Pipfile
@@ -19,13 +19,14 @@ seaborn = "*"
 pandas = "*"
 h5py = "*"
 redis = "*"
-tensorflow-gpu = "==1.12.0"
 requests = "*"
 pymongo = "*"
 pygame = "==1.9.6"
 grpcio = "==1.20.1"
-keras = "*"
 tensorflow = "==1.12.0"
+snoop = "*"
+tensorflow-gpu = "*"
+keras = "*"
 
 [requires]
 python_version = "3.6"
